ARROW-1999: [Python] Type checking in `from_numpy_dtype`

- Adds type checking to the C++ `NumPyDtypeToArrow` and `GetTensorType` to
  ensure `dtype` is actually a dtype object.
- Add conversion of non-dtype objects in `pa.from_numpy_dtype`.
- Adds tests to check a wider variety of inputs to
  `pa.from_numpy_dtype`, and ensure proper errors.

Author: Jim Crist <jiminy.crist@gmail.com>

Closes #1523 from jcrist/from_numpy_dtype and squashes the following commits:

e9de101 [Jim Crist] Type checking in `from_numpy_dtype`